customer/wl3/04-nginx-service.yaml
apiVersion:  apps/v1
kind: Service
metadata:
  name: nginx-service
  namespace: live-laminar
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
