customer/wl3/08-postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  namespace: live-laminar
spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30003 
  selector:
    app: postgresql
