customer/wl3/09-live-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: live-service
  namespace: client3
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30001 
  selector:
    app: java-app
