customer/wl3/11-mongodb-service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: mongodb-service
  namespace: live-laminar
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    app: mongodb
