customer/wl3/live-service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: live-laminar-service
  namespace: live-laminar
  labels:
    app: live-laminar
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30001 
  selector:
    app: java-app
