customer/wl3/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: client3
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
