customer/wl3/ingress.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: live-ingress
  namespace: live-laminar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: live.laminar.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
